fixed navbar overlap on mobile

--- a/code/src/App.css
+++ b/code/src/App.css
@@ -1,3 +1,10 @@
 .App{
     position: relative;
 }
+
+
+@media only screen and (max-width : 750px){
+    .main-content{
+        margin-top: 82px;
+    }
+}
